RESOLVED FIXED195348
[ iOS Simulator] REGRESSION (r241821) Layout Test platform/ipad/fast/viewport/viewport-unchanged-by-minimum-effective-width-if-not-ignore-meta-viewport.html is a flaky failure on bots
https://bugs.webkit.org/show_bug.cgi?id=195348
Summary [ iOS Simulator] REGRESSION (r241821) Layout Test platform/ipad/fast/viewport...
Shawn Roberts
Reported 2019-03-05 17:23:33 PST
The following layout test is flaky on iOS Simulator platform/ipad/fast/viewport/viewport-unchanged-by-minimum-effective-width-if-not-ignore-meta-viewport.html Probable cause: It appears changes made in r241821 are causing this test to fail, when it is run immediately after platform/ipad/fast/viewport/viewport-overriden-by-minimum-effective-width-if-ignore-meta-viewport.html It will fail immediately after, and then pass on the re-test. Dashboard shows 100% failure since this revision. Reproduced locally with : run-webkit-tests platform/ipad/fast/viewport/viewport-overriden-by-minimum-effective-width-if-ignore-meta-viewport.html platform/ipad/fast/viewport/viewport-unchanged-by-minimum-effective-width-if-not-ignore-meta-viewport.html --ipad-simulator --child-processes 1 Flakiness Dashboard: https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=platform%2Fipad%2Ffast%2Fviewport%2Fviewport-unchanged-by-minimum-effective-width-if-not-ignore-meta-viewport.html Diff: --- /Users/shawnroberts/Desktop/builds/ios241822/layout-test-results/platform/ipad/fast/viewport/viewport-unchanged-by-minimum-effective-width-if-not-ignore-meta-viewport-expected.txt +++ /Users/shawnroberts/Desktop/builds/ios241822/layout-test-results/platform/ipad/fast/viewport/viewport-unchanged-by-minimum-effective-width-if-not-ignore-meta-viewport-actual.txt @@ -1,17 +1,17 @@ setMinimumEffectiveWidth(640.00) -window size: [980, 1281] -square size: [98, 128] -zoom scale: 0.78 +window size: [768, 1004] +square size: [77, 100] +zoom scale: 1.00 setMinimumEffectiveWidth(768.00) -window size: [980, 1281] -square size: [98, 128] -zoom scale: 0.78 +window size: [768, 1004] +square size: [77, 100] +zoom scale: 1.00 setMinimumEffectiveWidth(834.00) -window size: [980, 1281] -square size: [98, 128] -zoom scale: 0.78 +window size: [834, 1090] +square size: [83, 109] +zoom scale: 0.92 setMinimumEffectiveWidth(980.00) window size: [980, 1281] @@ -19,23 +19,23 @@ zoom scale: 0.78 setMinimumEffectiveWidth(1024.00) -window size: [980, 1281] -square size: [98, 128] -zoom scale: 0.78 +window size: [1024, 1339] +square size: [102, 134] +zoom scale: 0.75 setMinimumEffectiveWidth(1112.00) -window size: [980, 1281] -square size: [98, 128] -zoom scale: 0.78 +window size: [1112, 1454] +square size: [111, 145] +zoom scale: 0.69 setMinimumEffectiveWidth(1280.00) -window size: [980, 1281] -square size: [98, 128] -zoom scale: 0.78 +window size: [1280, 1673] +square size: [128, 167] +zoom scale: 0.60 setMinimumEffectiveWidth(1336.00) -window size: [980, 1281] -square size: [98, 128] -zoom scale: 0.78 +window size: [1336, 1747] +square size: [134, 175] +zoom scale: 0.57
Attachments
Patch (1.78 KB, patch)
2019-03-21 14:08 PDT, Chris Dumez
no flags
Radar WebKit Bug Importer
Comment 1 2019-03-05 17:25:13 PST
Shawn Roberts
Comment 2 2019-03-08 10:44:13 PST
Additional repro steps: Found test was a constant failure on dashboard through its available history on iOS Simulator and Debug starting to appear around r241821 Test would not fail locally when running by itself. Using layout test results from build 2973 for Apple iOS 12 Simulator Release WK2 (Tests), I pulled the worker information and used this to start bisecting tests until I found it will fail when preceded by platform/ipad/fast/viewport/viewport-overriden-by-minimum-effective-width-if-ignore-meta-viewport.html Searched on Trac and found test was moved to a new iPad directory in r240150 and used this as a bisecting point. 242496 Failed 241913 failed 241837 Failed 241824 Failed 241822 Failed 241821 Failed 241820 Passed 241816 Passed 241790 Passed 241768 Passed 241617 Passed 241323 Passed 240150 Passed
Chris Dumez
Comment 3 2019-03-21 14:08:31 PDT
Chris Dumez
Comment 4 2019-03-22 10:02:20 PDT
Comment on attachment 365616 [details] Patch Clearing flags on attachment: 365616 Committed r243385: <https://trac.webkit.org/changeset/243385>
Chris Dumez
Comment 5 2019-03-22 10:02:21 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.