[ iOS Simulator] REGRESSION (r241821) Layout Test platform/ipad/fast/viewport/viewport-unchanged-by-minimum-effective-width-if-not-ignore-meta-viewport.html is a flaky failure on bots https://bugs.webkit.org/show_bug.cgi?id=195348 <rdar://problem/48622090>

Reviewed by Alex Christensen.

Make sure webView.configuration.preferences._shouldIgnoreMetaViewport gets reset
to NO when test.options().shouldIgnoreMetaViewport is false.

* WebKitTestRunner/ios/TestControllerIOS.mm:
(WTR::TestController::platformConfigureViewForTest):

Canonical link: https://commits.webkit.org/210447@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243385 268f45cc-cd09-0410-ab3c-d52691b4dbfc